--- a/crowdsource-ui/src/views/common/buttons/report-btn/report-btn.ejs
+++ b/crowdsource-ui/src/views/common/buttons/report-btn/report-btn.ejs
@@ -8,4 +8,4 @@
         <%= __('Report') %>
     </button>
 </div>
-<script async src="../../common/report-btn.js"></script>
+<script async src="../../js/common/report-btn.js"></script>
