[Sunny] correcting js imports

--- a/crowdsource-ui/src/views/common/modals/mic-speaker-testing/speaker-testing/speaker-testing.ejs
+++ b/crowdsource-ui/src/views/common/modals/mic-speaker-testing/speaker-testing/speaker-testing.ejs
@@ -25,4 +25,4 @@
     </div>
   </div>
 </div>
-<script async src="../../common/speaker-testing.js"></script>
+<script async src="../../js/common/speaker-testing.js"></script>
