| priyanshu| modify common components js path

--- a/crowdsource-ui/src/views/common/charts/barGraph/horizontal/horizontalBarGraph.ejs
+++ b/crowdsource-ui/src/views/common/charts/barGraph/horizontal/horizontalBarGraph.ejs
@@ -1,4 +1,4 @@
 <div id="speakers_hours_chart_container" class="w-100">
     <div id="speakers_hours_chart" class="w-90"></div>
 </div>
-<script src="../../js/horizontalBarGraph.js"></script>
+<script src="../../js/common/horizontalBarGraph.js"></script>
