--- a/crowdsource-ui/src/views/common/charts/map/map.ejs
+++ b/crowdsource-ui/src/views/common/charts/map/map.ejs
@@ -15,4 +15,4 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
-<script src="../../js/map.js"></script>
+<script src="../../js/common/map.js"></script>
