--- a/crowdsource-ui/src/views/common/charts/pieGraph/pieGraph.ejs
+++ b/crowdsource-ui/src/views/common/charts/pieGraph/pieGraph.ejs
@@ -2,4 +2,4 @@
     <%= __('Age Group Distribution') %>
 </div>
 <div id="age-group-chart" class="h-100"></div>
-<script src="../../js/pieGraph.js"></script>
+<script src="../../js/common/pieGraph.js"></script>
