--- a/crowdsource-ui/src/views/common/modals/mic-speaker-testing/mic-testing/mic-testing.ejs
+++ b/crowdsource-ui/src/views/common/modals/mic-speaker-testing/mic-testing/mic-testing.ejs
@@ -31,4 +31,4 @@
     </div>
   </div>
 </div>
-<script async src="../../common/mic.testing.js"></script>
+<script async src="../../js/common/mic-testing.js"></script>
