--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.css
@@ -297,7 +297,7 @@ body.modal-open .supreme-container {
 }
 
 .card{
-  background-image: url(../img/NEW-WAVE.svg);
+  background-image: url(../../img/NEW-WAVE.svg);
   mix-blend-mode: normal;
   box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
