--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -32,15 +32,7 @@
             </div>
           </div>
           <div class="row mt-5">
-            <div class="col-7 col-sm-8 offset-2 offset-lg-3 col-lg-6 col-xl-4 offset-xl-4">
-              <div class="progress mt-1">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
-              </div>
-            </div>
-            <div class="col-3 col-sm-2">
-              <span class="" id="currentSentenceLbl"></span> <span class="">/</span>
-              <span class="" id="totalSentencesLbl"></span>
-            </div>
+            <%- include ../common/progress-bar.ejs %>
           </div>
           <div class="recording-container">
             <div class="row justify-content-center d-none">
@@ -111,7 +103,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <%- include ../common/footer.ejs %>
     <%- include('../common/report.ejs',{"REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
-    <%- include (../common/unexpected-error.ejs) %> 
+    <%- include('../common/unexpected-error.ejs'); %> 
     <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
 
