--- a/crowdsource-ui/src/views/common/charts/lineGraph/lineGraph.ejs
+++ b/crowdsource-ui/src/views/common/charts/lineGraph/lineGraph.ejs
@@ -11,7 +11,6 @@
         </li>
     </ul>
 </div>
-<div class="text-center justify-content-center d-none align-items-center chart-spinner" id="timeline-loader"><span class="spinner"></span></div>
 <div id="timeline-chart" class="h-100 pb-4"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
-<script src="../../js/lineGraph.js"></script>
+<script src="../../js/common/lineGraph.js"></script>
