--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -24,9 +24,11 @@
         <div id="content-wrapper" class="d-flex flex-column">
             <div class="d-flex justify-content-end pt-3 record-btn-container">
                 <%- include ../common/report-btn.ejs %>
-                <%- include ../common/mic-speaker-test-btn.ejs %>
+                <%- include ../common/speakerTestBtn.ejs %>
             </div>
-            <%- include ../common/speaker-testing.ejs %>
+            <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
+                <%- include ../common/speakerTesting.ejs %>
+            </div>
             <div class="row">
                 <div class="col-12 justify-content-center text-center">
                     <%- __('Does the audio match the sentence?') %>
@@ -140,7 +142,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="../../js/sunoIndia/validator-prompt-page.js"></script>
-        <script src="../../js/common/speaker-testing.js"></script>
+        <script src="../../js/common/speakerTesting.js"></script>
     </div>
 </div>
 </body>
