| priyanshu| enable virtual keyboard on edit in validation page sunoIndia

--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -42,4 +42,12 @@ a{
     }
 }
 
+.hover-edit{
+    background-color: #F7F7F7;
+    opacity: 0.5;
+    border: 1px solid #343A40;
+    box-sizing: border-box;
+    border-radius: 12px;
+}
+
 
