--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -45,10 +45,12 @@
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
+                <label><%- __('Original Text')%></label>
                 <div class="col-lg-5 col-md-5 col-12" style="background-color:#7f8c8d" id="original-text">
-                    Original Text
+
                 </div>
                 <div class="form-group green-border-focus col-lg-5 col-md-5 col-12" id="edit-text">
+                    <label><%- __('Your Edit') %></label>
                     <textarea class="form-control edit-area" id="edit" rows="3" placeholder="<%- __('Your Edit') %>"></textarea>
                 </div>
             </div>
