--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -45,13 +45,15 @@
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
-                <label><%- __('Original Text')%></label>
-                <div class="col-lg-5 col-md-5 col-12" style="background-color:#7f8c8d" id="original-text">
+                <div class="col-lg-5 col-md-5 col-12 original-text">
+                    <label><%- __('Original Text')%></label>
+                    <div id="original-text">
 
+                    </div>
                 </div>
                 <div class="form-group green-border-focus col-lg-5 col-md-5 col-12" id="edit-text">
                     <label><%- __('Your Edit') %></label>
-                    <textarea class="form-control edit-area" id="edit" rows="3" placeholder="<%- __('Your Edit') %>"></textarea>
+                    <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
