--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -30,7 +30,7 @@
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                 <%- include ../common/speakerTesting.ejs %>
             </div>
-            <div class="row">
+            <div class="row" id="instructive-msg">
                 <div class="col-12 justify-content-center text-center">
                     <%- __('Does the audio match the sentence?') %>
                 </div>
@@ -54,6 +54,12 @@
                 <div class="form-group green-border-focus col-lg-5 col-md-5 col-12" id="edit-text">
                     <label><%- __('Your Edit') %></label>
                     <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
+                </div>
+            </div>
+            <div class="row justify-content-center d-none" id="thankyou-text">
+                <div class="col-12 text-center mt-4">
+                    <img src="../../img/tick.svg">
+                    <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for correcting!</label>
                 </div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
