--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -18,14 +18,14 @@ a{
 .original-text {
     border: 1px solid rgba(149, 149, 149, 0.5); 
     background-color:#f8f9fa;
-    height:180px;
+    min-height:180px;
     border-top-left-radius:12px;
     border-bottom-left-radius:12px;
     padding: 24px;
 }
 
 #edit-text {
-    height:180px;
+    min-height:180px;
     border-top-right-radius:12px;
     border-bottom-right-radius:12px;
     padding: 24px;
@@ -57,7 +57,6 @@ a{
     }
     .prompt{
         min-height: 150px;
-        max-height: 200px;
         padding: 32px;
     }
 }
