--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -51,7 +51,7 @@
 
                     </div>
                 </div>
-                <div class="form-group green-border-focus col-lg-5 col-md-5 col-12" id="edit-text">
+                <div class="form-group green-border-focus col-lg-5 col-md-5 col-12 m-0" id="edit-text">
                     <label><%- __('Your Edit') %></label>
                     <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
                 </div>
