| Priyanshu | fix header and footer path for each module

--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -6,22 +6,22 @@
             </div>
             <div class="d-lg-inline-flex justify-content-around mb-2">
                 <div class="py-2 px-16">
-                    <a href="./about-us.html">
+                    <a href="<%- `${path}about-us.html`%>">
                         <%= __('About Us') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./terms-and-conditions.html">
+                    <a href="<%- `${path}terms-and-conditions.html`%>">
                         <%= __('Terms & Conditions') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./terms-and-conditions.html#privacy-policy">
+                    <a href="<%-`${path}terms-and-conditions.html#privacy-policy` %>">
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./feedback.html">
+                    <a href="<%- `${path}feedback.html`%>">
                         <%= __('Feedback') %>
                     </a>
                 </div>
