--- a/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
+++ b/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
@@ -16,7 +16,7 @@
                 </div>
                 <div id="localisation_dropdown" class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="english" class="dropdown-item" href="#" locale="en">English</a></div>
             </li>
-            <li class="nav-item p-2"><a href="./about-us.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="<%- `${path}about-us.html`%>" class="nav-link text-dark font-weight-bold">
                     <%= __('About Us') %>
                 </a></li>
             <li class="nav-item p-2"><a class="nav-link text-dark font-weight-bold d-none" id="nav-user"><span class="material-icons align-middle mx-1">account_circle</span> <span id="nav-username"></span></a></li>
