--- a/crowdsource-ui/src/views/not-found.ejs
+++ b/crowdsource-ui/src/views/not-found.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <%- include common/headerForContributor.ejs %>
+<%- include('common/headerForContributor.ejs',{path:"./"}); %>
         <div class="container my-5 p-5">
             <div class="row justify-content-center">
                 <div class="col-sm-10 text-center">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <%- include common/footer.ejs %>
+    <%- include('common/footer.ejs',{path:"./"}) %>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
