--- a/crowdsource-ui/src/views/about-us.ejs
+++ b/crowdsource-ui/src/views/about-us.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <%- include common/headerForContributor.ejs %>
+    <%- include('common/headerForContributor.ejs',{path:"./"}); %>
         <div class="container-fluid">
             <div class="row pt-lg-5">
                 <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
@@ -113,7 +113,7 @@
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <%- include common/footer.ejs %>
+    <%- include('common/footer.ejs',{path:"./"}) %>
             <%- include modals/speakerDetail.ejs %>
                 <script>document.body.querySelector("footer").classList.remove("fixed-bottom")</script>
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
