--- a/crowdsource-ui/src/views/badge-info.ejs
+++ b/crowdsource-ui/src/views/badge-info.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include common/headerForContributor.ejs %>
+<%- include('common/headerForContributor.ejs',{path:"./"}); %>
 <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
     <div class="row mx-lg-5">
         <div class="col-12">
@@ -52,7 +52,7 @@
 
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<%- include common/footer.ejs %>
+<%- include('common/footer.ejs',{path:"./"}) %>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
