--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<%- include ../common/headerWithoutNavBar.ejs %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../"}) %>
 <div class="container container-fluid supreme-container">
     <div class="row">
         <div class="col-12">
@@ -108,7 +108,7 @@
 <%- include ../common/speakerDetail.ejs %>
 <%- include ../common/content-languages.ejs %>
 <%- include ../common/say-listen-language.ejs %>
-<%- include ../common/footer.ejs %>
+<%- include('../common/footer.ejs',{path:"../"}) %>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
