--- a/crowdsource-ui/src/views/thank-you.ejs
+++ b/crowdsource-ui/src/views/thank-you.ejs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<%- include common/headerForContributor.ejs %>
+<%- include('common/headerForContributor.ejs',{path:"./"}); %>
 <div id="content-wrapper" class="container-fluid mt-5 pt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
     <div class="text-center">
         <h1 class="display-5 font-wt-900 site-blue">
@@ -131,7 +131,7 @@
 
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<%- include common/footer.ejs %>
+<%- include('common/footer.ejs',{path:"./"}) %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="../js/thank-you.js"></script>
